--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   </header>
 
   <main class="flex-row justify-space-between">
+
+
     <div class="col-12 col-md-4">
       <div class="card">
         <h3 class="card-header text-uppercase">Search by user</h3>
@@ -30,7 +32,17 @@
           <button class="btn">Get User</button>
         </form>
       </div>
+
+      <div class="card">
+        <h3 class="card-header text-uppercase">Search by Topic</h3>
+        <div id="language-buttons" class="card-body">
+          <button data-language="javascript" class="btn">JavaScript</button>
+          <button data-language="html" class="btn text-uppercase">html</button>
+          <button data-language="css" class="btn text-uppercase">CSS</button>
+        </div>
+      </div>
     </div>
+
     <div class="col-12 col-md-8">
       <h2 class="subtitle">
         Showing Repositories for: <span id="repo-search-term"></span>
